# FinAPI

./: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: README  group.py  models.py  relations.py  spendings.py  user.py  wallet.py
app/schemas/: README  group.py  spendings.py  user.py  wallet.py
app/tests/: schema_test.py
finapi/: main.py
finapi/v1/: db.py  main.py  validators.py
migrations/: env.py
src/: database.py  main.py
src/auth/: database.py
src/users/: service.py
